fixed nav bar visibility issue

--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ background-color: black;
 
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link.active {
-    color: var(--primary);
+    color: var(--primary) !important;
 }
 
 @media (max-width: 991.98px) {
